# pdperf

./: .codacy.yml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  llms.txt  pyproject.toml  release.sh
.github/workflows/: ci.yml
examples/: slow_apply_axis1.py  slow_concat_in_loop.py  slow_iterrows.py
scripts/: fetch_codacy_issues.py
src/pandas_perf_opt/: analyzer.py  cli.py  config.py  reporting.py  rules.py
tests/: test_rules.py
